--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -85,6 +85,7 @@ May I publish your name?
 May I publish your email (it will be obfuscated to fool the spamers)?
 May I publish the name of your company?
 May I publish the logo of your company?
+    This will be published on https://fai-project.org/references/
 May I publish your pictures?
 ----------------------------------------------------------------
 </pre>
