--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -41,6 +41,7 @@ overridden without any further confirmation</b>.
 
 <form action="/cgi/faime.cgi" method="post" enctype="multipart/form-data">
 <input type="hidden"  name="baseclasses" value="AMD64 DEBIAN DHCPC DEMO GRUB_PC FAIBASE"/>
+<input type="hidden"  name="type" value="install"/>
 <label for="rootpw">Root password: <input size=4 id="rootpw"
  name="rootpw" /> If not set, sudo will be configured for the user account</label>
 
