--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -46,7 +46,7 @@ overridden without any further confirmation</b>.
  name="rootpw" /> If not set, sudo will be configured for the user account</label>
 
 <label for="rootkey">SSH key for the root account: <input size=4 id="rootkey" type="file"
- name="rootkey" /> Upload id*.pub file for login without a password</label>
+accept=".pub" name="rootkey" /> Upload id*.pub file for login without a password</label>
 
 <label for="user">  User  name: &ensp; &ensp;
 <input size=4 id="user" name="username" type="text" value="debian" required
@@ -122,7 +122,7 @@ keyboard-configuration</tt></li>
 <li>You should change the user and root password after installation</li>
 </ul>
 
-      <button name="submit_bttn" value="check">Create image</button>
+      <button name="submit_bttn" value="check">Create installation image</button>
 </form>
 Any feedback is welcome. Send an email to FAI.me =at= fai-project.org
 
