new release, talk

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[2 Feb 2018] FAI 5.5.3 released</li>
+<li>Thomas will give a <a
+href="https://chemnitzer.linux-tage.de/2018/en/programm/beitrag/273">talk</a>
+at the <a href="https://chemnitzer.linux-tage.de/">Chemnitzer
+Linuxtage</a> march 10th and 11th</li>
+<li>[23 Feb 2018] FAI 5.5.4 released</li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
 </li>
