--- a/contact/index.html
+++ b/contact/index.html
@@ -60,7 +60,7 @@ an <a href="mailto:ber=a=tun=g ==send=nospam@fai-cluster.de">email</a>.
 <li> The author also gives <a href="http://www.linuxhotel.de/kurs/fai/">tutorials
 at Linuxhotel</a>.
 <li> There are also other companies that have know-how in FAI and can help
-you. Just ask on the mailing list or IRC for help.
+you. Just ask via email for more information.
 </ul>
 
 <p> &nbsp; </p><p> &nbsp; </p>
