--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>Thomas will give a <a
+<li>[11 Mar 2018] FAI.me can now create cloud images</li>
+<li>Thomas gave a <a
 href="https://chemnitzer.linux-tage.de/2018/en/programm/beitrag/273">talk</a>
 at the <a href="https://chemnitzer.linux-tage.de/">Chemnitzer
-Linuxtage</a> march 10th and 11th</li>
+Linuxtage</a>, <a href="doc/chemnitz-2018-faime.pdf">slides</a></li>
 <li>[28 Feb 2018] FAI 5.6 released, new ISO images available</li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
