--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[11 Mar 2018] FAI.me can now create cloud images</li>
+<li>[13 Mar 2018] FAI.me can now create cloud images, <a
+href="https://blog.fai-project.org/">blog post</a></li>
 <li>Thomas gave a <a
 href="https://chemnitzer.linux-tage.de/2018/en/programm/beitrag/273">talk</a>
 at the <a href="https://chemnitzer.linux-tage.de/">Chemnitzer
-Linuxtage</a>, <a href="doc/chemnitz-2018-faime.pdf">slides</a></li>
+Linuxtage</a>, <a href="doc/chemnitz-2018-faime.pdf">slides (in german)</a></li>
 <li>[28 Feb 2018] FAI 5.6 released, new ISO images available</li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
