--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -113,7 +113,7 @@ backports for stretch including newer kernel</span>
 <li style="padding:0px !important; background: none">   <input type="checkbox" name="cl7" value="NONFREE" checked /> Non-free Linux firmware</li>
 </ul>
 <br>
-<label for="repo">Add one repository:
+<label for="repo">Add one public available repository:
       <input size=14 id="repo" name="repo" /> Only http(s) is allowed.
       <b>This feature is beta</b>.</label>
 
