--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -48,7 +48,7 @@ with any virtual machine. It's running a 64bit Debian Linux.
  name="disksize"  type="text" value="5" maxlength="2" style="margin-right: 20px" required /> </label></span>
 <select name="format" >
             <option value="raw.xz" > raw.xz</option>
-            <option value="raw.zst" selected="selected"> raw.zstd</option>
+            <option value="raw.zst" selected="selected"> raw.zst</option>
             <option value="qcow2"> qcow2</option>
             <option value="vdi"> vdi</option>
             <option value="vhdx"> vhdx</option>
