add talk and slides

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[16-20 May 2018] Thomas was at the MiniDebConf Hamburg and gave a
+<a href="/talks">talk</a></li>
 <li>[13 Mar 2018] FAI.me can now create cloud images, <a
 href="https://blog.fai-project.org/">blog post</a></li>
 <li>Thomas gave a <a
@@ -78,8 +80,6 @@ href="https://youtu.be/5eZcMTT70rg">Video
 </a> of creating a cross architecture disk image for ARM64
 </li>
 
-<li>[6 Sep 2017] Have a look at <a
-href="https://debconf17.debconf.org/talks/85/">the video</a> of my FAI demo at DebConf 17</li>
 <li>[14 Oct 2016] <a
 href="https://lists.uni-koeln.de/pipermail/linux-fai/2016-October/011549.html">FAI 5.2 is going to the cloud</a> </li>
 </ul>
