--- a/talks/index.html
+++ b/talks/index.html
@@ -117,7 +117,8 @@ live demos of FAI 5.0 </a> at DebConf 16 in Capetown.
 <a href="http://meetings-archive.debian.net/pub/debian-meetings/2017/debconf17/fai-demo-session.vp8.webm">video</a>,
 <a href="https://debconf17.debconf.org/talks/85/">talk announcement</a>
 
-<li> <a href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">Mini-Debconf Cambridge</a>
+<li> <a
+href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">Mini-Debconf Cambridge 2017</a>
 
 <ul>
 <li> talk: Creating disk images using FAI, <a href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/creating-disk-images-using-fai.vp9.webm">video</a>,
@@ -128,7 +129,12 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 <a href="/doc/cmb-17-2.pdf">Slides</a>
 </ul>
 
+<li> MiniDebConf Hamburg 2018: FAI.me - A Build Service for Installation and Cloud Images
+(<a href="/doc/faime-minidebconf-2018.pdf">slides</a> <a href="https://meetings-archive.debian.net/pub/debian-meetings/2018/miniconf-hamburg/2018-05-20/fai.me.webm">video</a>) 
+
 </ul>
+
+
 
 <!--
 <a href=http://www.linuxtag.org>LinuxTag 2004</a> 23-26. june in Karlsruhe or
@@ -147,10 +153,9 @@ and at
 <p>
 
 <ADDRESS>
-Wed, 29 Nov 2017 14:26:58 +0100
+Wed, 23 May 2018 14:59:53 +0200
 </ADDRESS>
 
- 
       </div>
     </div>
   </div>
