--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -32,22 +32,22 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.6.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO large  &nbsp; (1006 MB) </span>
+<a href="faicd64-large_5.7.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO large  &nbsp; (1012 MB) </span>
 </a>
 </span>
 &nbsp;
 &nbsp;
 &nbsp;
 The default image. Includes all packages for XFCE and GNOME but only the basefiles
-for CentOS 7 and Ubuntu 16.04
+for CentOS 7 and Ubuntu 18.04
 <p>
 <p> &nbsp;
 <p>
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.6.iso" style="text-decoration: none">
+<a href="faicd64-small_5.7.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO small &nbsp; (652 MB)</span>
 </a>
 </span>
@@ -61,21 +61,21 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.6.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.7.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.1 GB)</span>
 </a>
 </span>
 &nbsp;
 &nbsp;
 &nbsp;
-This image only installs Ubuntu 16.04 LTS. All packages are included.
+This image only installs Ubuntu 18.04 LTS. All packages are included.
 <p>
 <p> &nbsp;
 <p>
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.6.iso" style="text-decoration: none">
+<a href="faicd64-autodiscover_5.7.iso" style="text-decoration: none">
 <span class="downloadbox-real" >Autodiscover CD &nbsp; (24 MB) </span>
 </a>
 </span>
@@ -87,11 +87,11 @@ Boot only image which autodiscovers the FAI server.
 <br>
 
 <p style="text-align: center;">
-All installation images use Debian stretch, FAI 5.6, kernel 4.9, amd64 architecture,
+All installation images use Debian stretch, FAI 5.7, kernel 4.9, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
 <br>
 <b>If none of the ISOs fit your needs, use the <a href="/FAIme">FAI.ME build
-service</a></b>. It also supports Debian testing and stable with a
+service</a></b>. This also supports Debian testing and stable with a
 backports kernel.
 <HR>
 <p>
@@ -117,16 +117,16 @@ This is the small FAI CD using Debian stretch, kernel 4.9.
 
 You can write the ISO image onto a USB stick using the command dd(1):
 <div class="featurebox">
-<pre>dd if=faicd64-large_5.6.iso of=/dev/sdX</pre> </div>
+<pre>dd if=faicd64-large_5.7.iso of=/dev/sdX</pre> </div>
 and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <HR>
 <p>
 
-<h3>Short description for the FAI boot images</h3>
+<h3>Short description for the FAI CD images</h3>
 <ul>
 <li> These installation images can install Debian 9 (XFCE and GNOME),
-Ubuntu 16.04 and CentOS 7, without the need of an install server
+Ubuntu 18.04 and CentOS 7, without the need of an install server
 <li> No network is needed and you can install the whole system from
 the installation media.
 
