--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.6.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO (1006 MB)</span>
+<a href="/fai-cd/faicd64-large_5.7.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (1012 MB)</span>
 </a>
 </span>
 </p>
@@ -55,6 +55,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[4 June 2018] FAI 5.7 released and new ISO images available</a></li>
 <li>[16-20 May 2018] Thomas was at the MiniDebConf Hamburg and gave a
 <a href="/talks">talk</a></li>
 <li>[13 Mar 2018] FAI.me can now create cloud images, <a
@@ -65,7 +66,6 @@ href="https://chemnitzer.linux-tage.de/2018/en/programm/beitrag/273">talk
 at the <a href="https://chemnitzer.linux-tage.de/">Chemnitzer
 Linuxtage</a>, <a href="doc/chemnitz-2018-faime.pdf">slides (in
 german)</a></li>
-<li>[28 Feb 2018] FAI 5.6 released, new ISO images available</li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
 </li>
