--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,33 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> anonymous
+<br><b>Date:</b> Wed, 11 Jul 2018 12:16:02 +0200
+<pre>
+How many hosts have you installed using fai? <b>~20</b>
+Which version of fai are you using? <b>4.3.1+deb8u1</b>
+Which version are you using as your install kernel? plain debian kernel 3.16
+
+Which types of hosts are you installing with fai? Servers and Desktop
+
+How do you boot your hosts? PXE boot
+Does the default install kernel recognize all your hardware? No
+Which drivers are missing? ql2400_fw.bin
+Do you manage your configuration space under version control? Using git
+
+How big is your config space (Mbytes, # of files)? 1.4Mb, 237
+How many files do you have in ../config/files? 180
+
+What types of scripts are you using for local customization? Shell
+
+<b>What is the business of your company/organisation?</b> Government
+<br><b>Additional comments:</b>
+I install the same basic installation with FAI, rolling out ssh keys
+for the hosts. Rest of installation with ansible via ssh after first
+reboot after installation.
+</pre> <HR>
+
+
 <b>From:</b> Sylvain MILOT, first@bic mni dot .mcgill .ca
 <br><b>Date:</b> Tue, 19 Jun 2018 22:49:23 -0400 (EDT)
 <pre>
