--- a/talks/index.html
+++ b/talks/index.html
@@ -125,12 +125,18 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 <a href="/doc/cambridge-17.pdf">slides</a>
 <li>
 talk about d-i <a
-href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">video</a>,
-<a href="/doc/cmb-17-2.pdf">Slides</a>
+href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">video</a>, <a href="/doc/cmb-17-2.pdf">Slides</a>
 </ul>
-
 <li> MiniDebConf Hamburg 2018: FAI.me - A Build Service for Installation and Cloud Images
-(<a href="/doc/faime-minidebconf-2018.pdf">slides</a> <a href="https://meetings-archive.debian.net/pub/debian-meetings/2018/miniconf-hamburg/2018-05-20/fai.me.webm">video</a>) 
+(<a href="/doc/faime-minidebconf-2018.pdf">slides</a> <a href="https://meetings-archive.debian.net/pub/debian-meetings/2018/miniconf-hamburg/2018-05-20/fai.me.webm">video</a>)
+
+<li> DebConf 2018 Taiwan: FAI.me - A Build Service for Installation and Cloud Images
+(<a href="/doc/fai.me-build-service-dc18.pdf">slides</a>, <a href="https://meetings-archive.debian.net/pub/debian-meetings/2018/DebConf18/2018-08-02/fai-me-a-build-service-for-installation-.webm">video</a>)
+
+
+<li> <a href="https://debconf18.debconf.org/talks/84-using-fai-to-build-live-debian-images-for-arm-developer-boards/">Talk</a> by Riku Voipio: Using FAI to build Live debian images for ARM developer boards
+</li>
+
 
 </ul>
 
@@ -153,7 +159,7 @@ and at
 <p>
 
 <ADDRESS>
-Wed, 23 May 2018 14:59:53 +0200
+Tue, 07 Aug 2018 16:01:31 +0200
 </ADDRESS>
 
       </div>
