add chinese, hindi and japanese

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -91,6 +91,10 @@ password will be generated </label>
             <option value="ru"> Russian / Pу́сский</option>
             <option value="es"> Spanish / Español</option>
             <option value="tr"> Turkish / Türkçe</option>
+                                                <option value="cn"> Chinese (Simplified) /中文(简体)</option>
+                                                <option value="tw"> Chinese (Traditional) / 中文(繁體)</option>
+                                                <option value="hi"> Hindi / हिन्दी</option>
+                                                <option value="ja"> Japanese / 日本語</option>
 </select> Language and keyboard layout
 <input type=hidden name="partition" value="">
 <br></br>
