--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -104,6 +104,10 @@
 						<option value="ru"> Russian / Pу́сский</option>
 						<option value="es"> Spanish / Español</option>
 						<option value="tr"> Turkish / Türkçe</option>
+                                                <option value="cn"> Chinese (Simplified) /中文(简体)</option>
+                                                <option value="tw"> Chinese (Traditional) / 中文(繁體)</option>
+                                                <option value="hi"> Hindi / हिन्दी</option>
+                                                <option value="ja"> Japanese / 日本語</option>
 					</select> Language and keyboard layout
 					</p>
 
